--- a/ui/docker-compose.yml
+++ b/ui/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: aapl-ui
     build:
       context: .
+      target: development
     volumes:
       - '.:/app'
       - '/app/node_modules'
